task01/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task01-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task01
  template:
    metadata:
      labels:
        app: task01
    spec:
      containers:
        - name: task01
          image: grandumm/microservice-architecture:latest
          ports:
            - name: http
              containerPort: 8000
