task01/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
        - pathType: Prefix
          path: "/otusapp/ovodkov($|/)(.*)"
          backend:
            service:
              name: task01-service
              port:
                number: 9000
